# juniorya

./: .gitignore  CMakeLists.txt  Makefile  README.md  configure  main.c
adapters/: trajectory_adapter.cpp  trajectory_adapter.h
board/: CMakeLists.txt  board.c  board.h  config.h
calib/: CMakeLists.txt  calib.c  calib.h
cia402/: CMakeLists.txt  cia402.c  cia402.h  fb.c  fb.h
cmake/: os_detection.cmake  toolchain-arm-none-eabi.cmake
core/: CMakeLists.txt  cnc.c  cnc.h  cnc_api.c  cnc_state.c  cnc_state.h  command_processor.c  command_processor.h  commands.c  commands.h  main.c  state_machine.c  state_machine.h
core/include/: cnc_api.h
dds/: dds.c  dds.h
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  doc_kmk.tgz  doc_plc.tgz  index.rst  oc2.7_2.77.110 (1).tgz  oc3.6_3.61.101 (1).tgz  overview.rst  ppmkmk_1.4beta_2.76.106_2022.12.26_all.tgz
docs/source/: api.rst  calibration.rst  conf.py  dds.rst  deployment.rst  diagnostics.rst  ethercat.rst  ide.rst  index.rst  kinematics.rst  opcua.rst  osal.rst  overview.rst  planner.rst  platforms.rst  storage.rst  testplan.rst
drivers/: CMakeLists.txt  drivers.c  drivers.h  eth_mac.c  eth_mac.h  gpio.c  gpio.h  uart.c  uart.h
ethcat/: CMakeLists.txt  ethcat.c  ethcat.h  master.c  master.h  xml_loader.c  xml_loader.h
gcode/: CMakeLists.txt  gcode.c  gcode.h  parser.c  parser.h
gui/: MainWindow.cpp  MainWindow.h  main.cpp
gui/editors/: SplineEditor.cpp  SplineEditor.h
gui/view3d/: TrajectoryView.cpp  TrajectoryView.h
ide/: CMakeLists.txt  ide_app.c  ide_project.c  ide_project.h  st_compiler.c  st_compiler.h  st_runtime.h
kinematics/: CMakeLists.txt  delta.c  delta.h  delta_kinematics.c  delta_kinematics.h
ml/: CMakeLists.txt  tinyml_configurator.c  tinyml_configurator.h  tinyml_optimizer.c  tinyml_optimizer.h
motion/: CMakeLists.txt  motion.c  motion.h  motion_control.c  motion_control.h
opcua/: CMakeLists.txt  opcua.c  opcua.h
osal/: CMakeLists.txt  osal.c  osal.h  osal_host.c  osal_posix.c
planner/: CMakeLists.txt  planner.c  planner.h
planner/lookahead/: lookahead.c  lookahead.h
planner/s_curve/: s_curve.c  s_curve.h
planner/splines/: splines.c  splines.h
project/: project_manager.cpp  project_manager.h
render/: opengl_renderer.cpp  opengl_renderer.h
sim/: CMakeLists.txt  configurator.c  configurator.h  renderer.c  renderer.h  simulator.c  visualizer3d.c  visualizer3d.h
storage/: CMakeLists.txt  storage.c  storage.h
tests/: CMakeLists.txt  qemu_selftest.c  run_qemu_selftest.sh  test_cia402.c  test_console.c  test_ethcat.c  test_host.c  test_kinematics.c  test_opcua.c  test_planner.c  test_runner.c  test_splines.c  test_storage.c  test_suite.c  test_suite.h
tests/data/: demo_program.st  demo_project.cncp  keba_drive.xml  tinyml_profile.ini
tests/integration/: test_selftest.c
tests/unit/: test_kinematics.c  test_main.c  test_planner.c  test_storage.c
toolchains/: baget-komdiv64.cmake  baget.cmake  qemu-mips64.cmake  qnx.cmake  vxworks.cmake
tools/: opcua_dds_bridge.c
utils/: CMakeLists.txt  crc16.c  crc16.h  filter.c  filter.h  filters.c  filters.h  fixed.c  fixed.h  log.c  log.h  lut_trig.c  lut_trig.h  matrix.c  matrix.h  matrix3.c  matrix3.h  q16.c  q16.h  timer.c  timer.h  trig.c  trig.h  vec3.c  vec3.h
vision/: CMakeLists.txt  vision.c  vision.h
